[performance] Prevent inappropriate scrollbar toggling on the viewport

--- a/src/components/ScrollLock/ScrollLock.scss
+++ b/src/components/ScrollLock/ScrollLock.scss
@@ -1,10 +1,4 @@
-[data-lock-scrolling] {
-  overflow-y: scroll;
-  margin: 0;
-
-  // stylelint-disable selector-max-attribute
-  [data-lock-scrolling-wrapper] {
-    overflow: hidden;
-    height: 100%;
-  }
+[data-lock-scrolling-wrapper] {
+  overflow: hidden;
+  height: 100%;
 }
